Closed Bug 1870258 Opened 11 months ago Closed 11 months ago

Sidebar does not follow OS theme

Categories

(Core :: Widget, defect, P3)

Unspecified
Windows
defect

Tracking

()

VERIFIED FIXED
122 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox120 --- unaffected
firefox121 --- unaffected
firefox122 --- fixed

People

(Reporter: t.matsuu, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Steps to reproduce:

  1. OS theme is set to dark
  2. Start Firefox
  3. Apply "System theme — auto" theme
  4. Show sidebar

Expected result:
Sidebar should be set to the dark theme.

Actual Result:
Sidebar is set to the light theme.

Additional Information:
Tested on Firefox Nightly win64

Regression range by mozregression:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=691e5b3199934b481e0e7130b07a9f0928d8c62c&tochange=66ce07c162324dbea9047a4344cf908cffb863d0

Set release status flags based on info from the regressing bug 1869299

:emilio, since you are the author of the regressor, bug 1869299, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

I can't seem to reproduce this on Ubuntu 23.10.

OS: Unspecified → Linux
OS: Linux → Windows
Assignee: nobody → emilio
Flags: needinfo?(emilio)

Windows is the only platform which doesn't have proper native system
colors, and we have to emulate them. Preserve behavior by returning the
same that field/fieldtext etc used to return.

Component: Theme → Widget
Product: Firefox → Core
Severity: -- → S3
Priority: -- → P3
Pushed by dgottwald@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2d19e1f44e56 Add generic dark -moz-sidebar colors. r=dao
Status: NEW → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
Flags: qe-verify+

Reproduced the issue with Firefox 122.0a1 (2023-12-15) on Windows 10.
The issue is verified fixed with Firefox 123.0a1 (20231221170215) and Firefox 122.0b2 (20231220091547) on Windows 10.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: