Bug 1870258 - Add generic dark -moz-sidebar colors. r=dao

Windows is the only platform which doesn't have proper native system
colors, and we have to emulate them. Preserve behavior by returning the
same that field/fieldtext etc used to return.

Differential Revision: https://phabricator.services.mozilla.com/D196596